--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,5 @@
 {
   "eslint.validate": ["vue"],
-
-  "vetur.format.defaultFormatter.js": "prettier-eslint",
-  "vetur.format.defaultFormatter.ts": "prettier-tslint",
   "vetur.format.defaultFormatter.html": "prettier",
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
@@ -11,5 +8,6 @@
   "git.ignoreLimitWarning": true,
   "rust-analyzer.runnableEnv": {
     "DATABASE_URL": "postgres://postgres@localhost/virtual_poster"
-  }
+  },
+  "typescript.format.enable": false
 }
