Clean up dependencies

--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "private": true,
   "scripts": {
-    "init_data": "ts-node -O '{\"module\": \"commonjs\"}' src/server/initialize_data.ts",
+    "init_data": "ts-node -O '{\"module\": \"commonjs\"}' server/initialize_data.ts",
     "test": "jest --runInBand --forceExit",
-    "prod": "NODE_ENV=production ts-node -O '{\"module\": \"commonjs\"}' src/server/index.ts | pino-pretty",
-    "prod:log": "NODE_ENV=production DEBUG_LOG=1 ts-node -O '{\"module\": \"commonjs\"}' src/server/index.ts | pino-pretty",
-    "nohup": "NODE_ENV=production nohup node_modules/.bin/ts-node -O '{\"module\": \"commonjs\"}' src/server/index.ts &",
-    "socket": "nodemon --exec ts-node -O '{\"module\": \"commonjs\"}' src/server/socket_standalone.ts | bunyan -o short",
-    "socket:nohup": "NODE_ENV=production nohup ts-node -O '{\"module\": \"commonjs\"}' src/server/socket_standalone.ts > socket.nohup.out &",
+    "prod": "NODE_ENV=production ts-node -O '{\"module\": \"commonjs\"}' server/index.ts | pino-pretty",
+    "prod:log": "NODE_ENV=production DEBUG_LOG=1 ts-node -O '{\"module\": \"commonjs\"}' server/index.ts | pino-pretty",
+    "nohup": "NODE_ENV=production nohup node_modules/.bin/ts-node -O '{\"module\": \"commonjs\"}' server/index.ts &",
+    "socket": "nodemon --exec ts-node -O '{\"module\": \"commonjs\"}' server/socket_standalone.ts | bunyan -o short",
+    "socket:nohup": "NODE_ENV=production nohup ts-node -O '{\"module\": \"commonjs\"}' server/socket_standalone.ts > socket.nohup.out &",
     "serve": "vue-cli-service serve",
-    "server": "nodemon --exec ts-node -O '{\"module\": \"commonjs\"}' src/server/index.ts | pino-pretty",
+    "server": "nodemon --exec ts-node -O '{\"module\": \"commonjs\"}' server/index.ts | pino-pretty",
     "dev": "set NODE_ENV=development && nodemon -L >&2 | npm run serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint --no-fix",
@@ -23,6 +23,7 @@
     "hooks": {}
   },
   "dependencies": {
+    "@types/jest": "^26.0.10",
     "@types/js-yaml": "^3.12.5",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/papaparse": "^5.0.3",
@@ -33,13 +34,9 @@
     "axios": "^0.19.2",
     "blind-signatures": "^1.0.7",
     "bunyan": "^1.8.12",
-    "command-line-args": "^5.1.1",
-    "core-js": "^3.6.4",
     "cors": "^2.8.5",
-    "drift-zoom": "^1.4.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-bearer-token": "^2.4.0",
-    "express-prettify": "^0.1.1",
     "fastify": "^3.0.3",
     "fastify-express": "^0.1.0",
     "fastify-multer": "^2.0.1",
@@ -47,44 +44,37 @@
     "firebase": "^7.14.4",
     "firebase-admin": "^8.12.1",
     "firebaseui": "^4.5.0",
-    "global": "^4.4.0",
     "ioredis": "^4.16.3",
     "js-yaml": "^3.14.0",
+    "jsbn": "^1.1.0",
     "jsonwebtoken": "^8.5.1",
     "jssha": "^3.1.0",
     "lodash": "^4.17.15",
     "lodash-es": "^4.17.15",
-    "middie": "^5.1.0",
     "moment": "^2.24.0",
-    "multer": "^1.4.2",
-    "openapi-validator-middleware": "^3.0.1",
+    "openapi-validator-middleware": "^3.1.0",
     "papaparse": "^5.2.0",
     "pg-promise": "^10.5.6",
+    "pino": "^6.5.1",
     "pino-pretty": "^4.0.3",
     "shortid": "^2.2.15",
     "skyway-js": "^3.0.2",
     "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "socket.io-emitter": "^3.1.1",
     "socket.io-redis": "^5.2.0",
+    "spdy": "^4.0.2",
     "sticky-session": "^1.1.2",
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.4.1",
-    "ws": "^7.3.1"
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "@types/bluebird": "^3.5.30",
     "@types/bunyan": "^1.8.6",
-    "@types/command-line-args": "^5.0.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/ioredis": "^4.16.0",
-    "@types/jest": "^26.0.7",
     "@types/lodash-es": "^4.17.3",
-    "@types/multer": "^1.4.3",
     "@types/node": "^13.11.1",
-    "@types/redis": "^2.8.18",
     "@types/shortid": "0.0.29",
     "@types/socket.io": "^2.1.4",
     "@types/socket.io-redis": "^1.0.25",
@@ -102,13 +92,14 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.2.2",
     "husky": "^4.2.5",
-    "jest": "^26.1.0",
+    "jest": "^26.4.2",
     "nodemon": "^2.0.3",
     "prettier": "^1.19.1",
     "prettier-eslint": "^9.0.1",
     "ts-jest": "^26.1.3",
     "ts-node": "^8.8.2",
     "typescript": "^3.9.7",
+    "vue-eslint-parser": "^7.1.0",
     "vue-mixin-decorator": "^1.2.0",
     "vue-template-compiler": "^2.6.11"
   },
