Upload poster files to AWS S3 optionally.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
     "server/*.ts",
     "**/*.ts",
     "**/*.tsx",
-    "*.vue",
+    "client/*.vue",
+    "client/**/*.vue",
     "tests/**/*.ts",
     "tests/*.js",
     "tests/**/*.tsx",
