--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-# VUE_APP_ROOT_URL="http://localhost:8080"
+APP_DOMAIN=https://example.com/
+CDN_DOMAIN=https://cdn.example.com/
 CERTIFICATE_FOLDER=/etc/letsencrypt/live/<YOUR-DOMAIN.com>/
 POSTGRES_CONNECTION_STRING=postgres://postgres@localhost/virtual_poster
 DEBUG_TOKEN=XXXXXXX
@@ -6,3 +7,10 @@ DEBUG_AS=U******
 DEBUG_LOG=1
 GOOGLE_APPLICATION_CREDENTIALS=./<YOUR-FIREBSE-SECRET>.json
 VUE_APP_SKYWAY_API_KEY=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
+DEBUG_TOKEN=XXXXXX
+AWS_REGION=ap-northeast-1
+AWS_ACCESS_KEY_ID=XXXXXXXXXXXXXXXXX
+AWS_SECRET_ACCESS_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+UPLOAD_TO_S3=YES
+USE_S3_CDN=YES
+S3_BUCKET=<S3-bucket-name>
