--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/socket.io-emitter": "^3.1.0",
     "@types/spdy": "^3.4.4",
     "@vue/composition-api": "^1.0.0-beta.5",
+    "aws-sdk": "^2.740.0",
     "axios": "^0.19.2",
     "blind-signatures": "^1.0.7",
     "bunyan": "^1.8.12",
