Login and registration flow. BIP39 mnemonic for private key

--- a/.env.example
+++ b/.env.example
@@ -7,10 +7,11 @@ DEBUG_AS=U******
 DEBUG_LOG=1
 GOOGLE_APPLICATION_CREDENTIALS=./<YOUR-FIREBSE-SECRET>.json
 VUE_APP_SKYWAY_API_KEY=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
-DEBUG_TOKEN=XXXXXX
+DEBUG_TOKEN=hogehoge
+VUE_APP_SKYWAY_API_KEY=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
 AWS_REGION=ap-northeast-1
 AWS_ACCESS_KEY_ID=XXXXXXXXXXXXXXXXX
 AWS_SECRET_ACCESS_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 UPLOAD_TO_S3=YES
 USE_S3_CDN=YES
-S3_BUCKET=<S3-bucket-name>
+S3_BUCKET=s3-bucket-name
