--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "@vue/composition-api": "^1.0.0-beta.5",
     "aws-sdk": "^2.740.0",
     "axios": "^0.19.2",
+    "bip39": "^3.0.2",
     "blind-signatures": "^1.0.7",
     "bunyan": "^1.8.12",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fastify": "^3.0.3",
-    "fastify-express": "^0.1.0",
+    "fastify-cookie": "^4.0.2",
     "fastify-multer": "^2.0.1",
     "fastify-static": "^3.1.0",
     "firebase": "^7.14.4",
