Use cookie for session. Encryption UI.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,7 @@
     "server/*.ts",
     "**/*.ts",
     "**/*.tsx",
-    "client/*.vue",
-    "client/**/*.vue",
+    "**/*.vue",
     "tests/**/*.ts",
     "tests/*.js",
     "tests/**/*.tsx",
