--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,4 @@ AWS_SECRET_ACCESS_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 UPLOAD_TO_S3=YES
 USE_S3_CDN=YES
 S3_BUCKET=s3-bucket-name
+USER_REGISTRATION=YES
