Use yaml for server config. Take poster slot. Fix schema.

--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "test": "jest --runInBand --forceExit",
     "prod": "NODE_ENV=production ts-node -O '{\"module\": \"commonjs\"}' server/index.ts | pino-pretty",
     "prod:log": "NODE_ENV=production DEBUG_LOG=1 ts-node -O '{\"module\": \"commonjs\"}' server/index.ts | pino-pretty",
-    "nohup": "NODE_ENV=production nohup node_modules/.bin/ts-node -O '{\"module\": \"commonjs\"}' server/index.ts &",
+    "nohup": "sudo NODE_ENV=production nohup node dist_server/server/index.js &",
     "socket": "nodemon --exec ts-node -O '{\"module\": \"commonjs\"}' server/socket_standalone.ts | bunyan -o short",
-    "socket:nohup": "NODE_ENV=production NO_TLS=1 PORT=80 nohup ts-node -O '{\"module\": \"commonjs\"}' server/socket_standalone.ts > socket.nohup.out &",
+    "socket:nohup": "sudo NODE_ENV=production NO_TLS=1 PORT=80 nohup node dist_server/server/socket_standalone.js > socket.nohup.out &",
     "serve": "vue-cli-service serve",
     "server": "nodemon --exec ts-node -O '{\"module\": \"commonjs\"}' server/index.ts | pino-pretty",
     "dev": "set NODE_ENV=development && nodemon -L >&2 | npm run serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build && tsc",
     "lint": "vue-cli-service lint --no-fix",
     "lint:fix": "vue-cli-service lint",
     "db": "psql postgres -d virtual_poster"
