--- a/rust-server/.cargo/config
+++ b/rust-server/.cargo/config
@@ -1,3 +1,2 @@
-
 [build]
-rustflags = ["-Z", "run-dsymutil=no","-C", "link-arg=-fuse-ld=ld"]
+# rustflags = ["-Z", "run-dsymutil=no","-C", "link-arg=-fuse-ld=ld"]
