--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "**/*.ts",
     "**/*.tsx",
     "*.vue",
-    "*/*.vue",
+    "client",
     "**/*.vue",
     "tests/**/*.ts",
     "tests/*.js",
