--- a/server/virtual-poster.v1.yaml
+++ b/server/virtual-poster.v1.yaml
@@ -1103,7 +1103,7 @@ paths:
                   - ok
       operationId: post-logout
       description: Logout from the app and remove cookie
-  "/maps/{roomId}/take_slot/{posterLocation}":
+  "/maps/{roomId}/take_slot/{posterNumber}":
     parameters:
       - schema:
           type: string
@@ -1112,7 +1112,7 @@ paths:
         required: true
       - schema:
           type: number
-        name: posterLocation
+        name: posterNumber
         in: path
         required: true
     post:
