--- a/server/virtual-poster.v1.yaml
+++ b/server/virtual-poster.v1.yaml
@@ -1039,7 +1039,8 @@ paths:
   /public_key:
     get:
       summary: Get my public key
-      tags: []
+      tags:
+        - misc
       responses:
         "200":
           description: OK
@@ -1084,6 +1085,8 @@ paths:
                   type: boolean
               required:
                 - key
+      tags:
+        - misc
   /logout:
     post:
       summary: Logout
@@ -1326,6 +1329,34 @@ paths:
       description: Post a comment in a room
       tags:
         - chat
+  "/maps/{roomId}/posters/{posterId}/approach":
+    parameters:
+      - schema:
+          type: string
+        name: roomId
+        in: path
+        required: true
+      - schema:
+          type: string
+        name: posterId
+        in: path
+        required: true
+    post:
+      summary: Approach the poster
+      tags:
+        - map
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  ok:
+                    type: boolean
+      operationId: post-maps-roomId-posters-posterId-approach
+      description: Approach a poster by walking.
 components:
   parameters:
     debug_token:
