Upgrade to Vue3. Use original emoji picker.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "**/*.ts",
     "**/*.tsx",
     "*.vue",
-    "client",
+    "client/*/*.vue",
+    "client/*.ts",
     "**/*.vue",
     "tests/**/*.ts",
     "tests/*.js",
