--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
   "name": "virtual-poster",
   "version": "1.0.0",
-  "description": "",
   "private": true,
+  "description": "",
+  "author": "Hiro Kai <fullerenec84@gmail.com>",
   "scripts": {
-    "init_data": "ts-node -O '{\"module\": \"commonjs\"}' server/initialize_data.ts",
-    "test": "NODE_TEST=1 jest --runInBand --forceExit",
-    "prod": "NODE_ENV=production ts-node -O '{\"module\": \"commonjs\"}' server/index.ts | pino-pretty",
-    "prod:log": "NODE_ENV=production DEBUG_LOG=1 ts-node -O '{\"module\": \"commonjs\"}' server/index.ts | pino-pretty",
-    "nohup": "sudo NODE_ENV=production nohup node dist_server/server/index.js &",
-    "socket": "nodemon --exec ts-node -O '{\"module\": \"commonjs\"}' server/socket_standalone.ts | bunyan -o short",
-    "socket:nohup": "sudo NODE_ENV=production NO_TLS=1 PORT=80 nohup node dist_server/server/socket_standalone.js > socket.nohup.out &",
     "serve": "vue-cli-service serve",
-    "server": "nodemon --exec ts-node -O '{\"module\": \"commonjs\"}' server/index.ts | pino-pretty",
-    "dev": "set NODE_ENV=development && nodemon -L >&2 | npm run serve",
     "build": "vue-cli-service build && tsc",
     "lint": "vue-cli-service lint --no-fix",
-    "lint:fix": "vue-cli-service lint",
     "db": "psql postgres -d virtual_poster",
-    "dev:api": "rm -r api && openapi2aspida -i server/virtual-poster.v1.yaml"
-  },
-  "husky": {
-    "hooks": {}
+    "dev": "set NODE_ENV=development && nodemon -L >&2 | npm run serve",
+    "dev:api": "rm -r api && openapi2aspida -i server/virtual-poster.v1.yaml",
+    "init_data": "ts-node -O '{\"module\": \"commonjs\"}' server/initialize_data.ts",
+    "lint:fix": "vue-cli-service lint",
+    "nohup": "sudo NODE_ENV=production nohup node dist_server/server/index.js &",
+    "prod": "NODE_ENV=production ts-node -O '{\"module\": \"commonjs\"}' server/index.ts | pino-pretty",
+    "prod:log": "NODE_ENV=production DEBUG_LOG=1 ts-node -O '{\"module\": \"commonjs\"}' server/index.ts | pino-pretty",
+    "server": "nodemon --exec ts-node -O '{\"module\": \"commonjs\"}' server/index.ts | pino-pretty",
+    "socket": "nodemon --exec ts-node -O '{\"module\": \"commonjs\"}' server/socket_standalone.ts | bunyan -o short",
+    "socket:nohup": "sudo NODE_ENV=production NO_TLS=1 PORT=80 nohup node dist_server/server/socket_standalone.js > socket.nohup.out &",
+    "test": "NODE_TEST=1 jest --runInBand --forceExit"
   },
   "dependencies": {
     "@aspida/axios": "^0.11.2",
@@ -32,12 +30,12 @@
     "@types/pino": "^6.3.0",
     "@types/socket.io-emitter": "^3.1.0",
     "@types/spdy": "^3.4.4",
-    "@vue/composition-api": "^1.0.0-beta.5",
     "aws-sdk": "^2.740.0",
     "axios": "^0.19.2",
     "bip39": "^3.0.2",
     "blind-signatures": "^1.0.7",
     "bunyan": "^1.8.12",
+    "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "emoji-mart-vue-fast": "^7.0.4",
@@ -69,7 +67,7 @@
     "socket.io-redis": "^5.2.0",
     "spdy": "^4.0.2",
     "sticky-session": "^1.1.2",
-    "vue": "^2.6.11"
+    "vue": "3.0.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
@@ -77,23 +75,23 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/ioredis": "^4.16.0",
-    "@types/lodash-es": "^4.17.3",
     "@types/node": "^13.11.1",
     "@types/shortid": "0.0.29",
     "@types/socket.io": "^2.1.4",
     "@types/socket.io-redis": "^1.0.25",
     "@types/sticky-session": "^1.1.0",
-    "@typescript-eslint/eslint-plugin": "^3.7.1",
-    "@typescript-eslint/parser": "^3.7.1",
-    "@vue/cli-plugin-babel": "~4.3.0",
-    "@vue/cli-plugin-eslint": "~4.3.0",
-    "@vue/cli-plugin-typescript": "~4.3.0",
-    "@vue/cli-service": "~4.3.0",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0-0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vue": "^7.0.0-0",
     "husky": "^4.2.5",
     "jest": "^26.4.2",
     "nodemon": "^2.0.3",
@@ -102,10 +100,10 @@
     "prettier-eslint": "^9.0.1",
     "ts-jest": "^26.1.3",
     "ts-node": "^8.8.2",
-    "typescript": "^3.9.7",
-    "vue-eslint-parser": "^7.1.0",
-    "vue-template-compiler": "^2.6.11"
+    "typescript": "^3.9.7"
   },
-  "author": "Hiro Kai <fullerenec84@gmail.com>",
+  "husky": {
+    "hooks": {}
+  },
   "license": "MIT"
 }
