--- a/rust-server/Cargo.toml
+++ b/rust-server/Cargo.toml
@@ -48,6 +48,6 @@ sha2="*"
 uuid = { version = "0.8", features = ["serde", "v4"] }
 actix-web-actors = "2.0.0"
 futures-util="0.3.5"
-tokio="0.2.2"
+tokio={version = "0.2.2", features = ["time"]}
 log="*"
 itertools="0.9"
